kubernetes/apps/windmill/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: windmill-ingress
  namespace: windmill
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`windmill.sobrinho.pt`) && PathPrefix(`/ws/`)
      kind: Rule
      priority: 10
      services:
        - name: windmill-extra
          port: 3000
    - match: Host(`windmill.sobrinho.pt`) && PathPrefix(`/ws_debug/`)
      kind: Rule
      priority: 10
      services:
        - name: windmill-extra
          port: 3000
    - match: Host(`windmill.sobrinho.pt`) && PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: windmill-app
          port: 8000
  tls:
    secretName: windmill-cert
